--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-- soon
+<html>
+<head>
+<link rel="canonical" href="https://philipp-doblhofer.github.io">
+</head>
+<body>
+-> soon
+</body>
+</html>
