--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Philipp Doblhofer - CV</title>
 	<meta name="description" content="Curriculum vitae of Philipp Doblhofer, born on the ninth of April in Linz, Austria. Philipp successfully launched two businesses during studing electrical engineering."/>
 	<link rel="canonical" href="https://philipp-doblhofer.github.io">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, user-scalable=yes">
 
 	<link rel="alternate" href="https://philipp-doblhofer.github.io/" hreflang="en" />
 	<link rel="alternate" href="https://philipp-doblhofer.github.io/de.html" hreflang="de" />
