--- a/de.html
+++ b/de.html
@@ -17,7 +17,7 @@
 
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
 	<style>
@@ -48,10 +48,10 @@
 
 <body>
 
+        	<h1>Lebenslauf Philipp Doblhofer</h1>
     <div class="container timeline-container">
         <div class="row">
             <div class="timeline-centered">
-            
             	<div class="portrait">
             		<img src="./Philipp-Doblhofer.jpg" alt="Philipp Doblhofer" title="Philipp Doblhofer" />
             	</div>
@@ -254,7 +254,7 @@
     
 <div class="content">
 	<center style="margin-bottom: 30px">
-	<a href="./index.html">English</a> - Deutsch
+	<a href="/">English</a> - Deutsch
 	</center>
 </div>
 
