--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
                             <p>Web Development, Software Development, Firmware Development, Mobile Development, Online Marketing, Social Media Marketing, SEO, Social Recruiting, Employer Branding, Consulting</p>
                             <p>
-                            	<a href="https://www.codeaware.at/" target="_blank" class="btn btn-social-icon btn-link" title="codeaware GmbH | DIGITAL AGENCY"><span class="fa fa-link"></span></a>
+                            	<a href="https://goo.gl/SeD33h" target="_blank" class="btn btn-social-icon btn-link" title="codeaware GmbH | DIGITAL AGENCY"><span class="fa fa-link"></span></a>
                             	<a href="https://www.facebook.com/codeaware/" target="_blank" class="btn btn-social-icon btn-facebook" title="codeaware GmbH | DIGITAL AGENCY on Facebook"><span class="fa fa-facebook"></span></a>
                             	<a href="https://twitter.com/codeaware_gmbh" target="_blank" class="btn btn-social-icon btn-twitter" title="codeaware GmbH | DIGITAL AGENCY on Twitter"><span class="fa fa-twitter"></span></a>
                             	<a href="https://www.linkedin.com/company/codeaware-gmbh/" target="_blank" class="btn btn-social-icon btn-linkedin" title="codeaware GmbH | DIGITAL AGENCY on LinkedIn"><span class="fa fa-linkedin"></span></a>
