--- a/de.html
+++ b/de.html
@@ -66,7 +66,7 @@
 
                         <div class="timeline-label">
                             <h2><strong>Philipp Doblhofer</strong><span>, geboren in </span> <strong>Linz, Austria</strong></h2>
-                            <p><img title="Linz, Austria" alt="Linz, Austria" src="https://maps.googleapis.com/maps/api/staticmap?center=Linz,Austria&zoom=6&size=400x300&maptype=roadmap&markers=color:red%7Clabel:L%7C48.3069,14.2858&key=AIzaSyDdPJ6Q72Npg2l_RG6dC03zHLM6YrTXvb0"/></p>
+                            <p><img title="Linz, Austria" alt="Linz, Austria" src="https://maps.googleapis.com/maps/api/staticmap?center=Linz,Austria&zoom=6&size=400x300&maptype=roadmap&markers=color:red%7Clabel:L%7C48.3069,14.2858&key=AIzaSyDdPJ6Q72Npg2l_RG6dC03zHLM6YrTXvb0&signature=p-WZkk-0Ny1h-b5qf_ObiCRfjvs="/></p>
                         </div>
                     </div>
                 </article>
