--- a/de.html
+++ b/de.html
@@ -12,6 +12,7 @@
 	<link rel="alternate" href="https://philipp-doblhofer.github.io/" hreflang="en" />
 	<link rel="alternate" href="https://philipp-doblhofer.github.io/de.html" hreflang="de" />
 	<link rel="alternate" href="https://philipp-doblhofer.github.io/" hreflang="x-default" />
+	<meta name="google-site-verification" content="GGS7qCe5cjRrxj9ippgdlkzvK89hORlAN4JBiPjqIOg" />
 
 	<link rel="stylesheet" href="style.css">
 
