--- a/de.html
+++ b/de.html
@@ -5,7 +5,7 @@
   	<meta charset="UTF-8">
 	<title>Philipp Doblhofer - CV</title>
 	<meta name="description" content="Curriculum vitae von Philipp Doblhofer, geboren am 9. April 1994 in Linz, Österreich. Philipp Doblhofer gründete bereits während seinem Elektrotechnik-Studium zwei Unternehmen."/>
-	<link rel="canonical" href="https://philipp-doblhofer.github.io/de.html">
+	<link rel="canonical" href="https://www.doblhofer.it/de.html">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, user-scalable=yes">
 
