--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, user-scalable=yes">
 
-	<link rel="alternate" href="https://philipp-doblhofer.github.io/" hreflang="en" />
-	<link rel="alternate" href="https://philipp-doblhofer.github.io/de.html" hreflang="de" />
-	<link rel="alternate" href="https://philipp-doblhofer.github.io/" hreflang="x-default" />
+	<link rel="alternate" href="https://www.doblhofer.it/" hreflang="en" />
+	<link rel="alternate" href="https://www.doblhofer.it/de.html" hreflang="de" />
+	<link rel="alternate" href="https://www.doblhofer.it/" hreflang="x-default" />
 	<meta name="google-site-verification" content="GGS7qCe5cjRrxj9ippgdlkzvK89hORlAN4JBiPjqIOg" />
 
 	<link rel="stylesheet" href="style.css">
