--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-<meta http-equiv="refresh" content="0; url=https://www.doblhofer.it/en/">
+<meta http-equiv="refresh" content="0; url=https://www.philipp-doblhofer.at/en/">
 </head>
 <body>
-	Redirecting to <a href="https://www.doblhofer.it/en/">https://www.doblhofer.it/en/</a> ...
+	Redirecting to <a href="https://www.philipp-doblhofer.at/en/">https://www.doblhofer.it/en/</a> ...
 </body>
 
 </html>
