--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="refresh" content="0; url=https://www.philipp-doblhofer.at/en/">
 </head>
 <body>
-	Redirecting to <a href="https://www.philipp-doblhofer.at/en/">https://www.doblhofer.it/en/</a> ...
+	Redirecting to <a href="https://www.philipp-doblhofer.at/en/">https://www.philipp-doblhofer.at/en/</a> ...
 </body>
 
 </html>
