--- a/de.html
+++ b/de.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-<meta http-equiv="refresh" content="0; url=https://www.doblhofer.it/">
+<meta http-equiv="refresh" content="0; url=https://www.philipp-doblhofer.at/">
 </head>
 <body>
-	Redirecting to <a href="https://www.doblhofer.it">https://www.doblhofer.it</a> ...
+	Redirecting to <a href="https://www.philipp-doblhofer.at">https://www.philipp-doblhofer.at</a> ...
 </body>
 
 </html>
